Bubble layout: Stop read avatars overflowing

--- a/res/css/views/rooms/_BubbleLayout.scss
+++ b/res/css/views/rooms/_BubbleLayout.scss
@@ -118,6 +118,9 @@ $left-gutter: 56px;
         margin-top: 6px;
         margin-bottom: 6px;
 
+        // stop read avatars overflowing
+        width: 100%;
+
         &.sc_readReceipts_empty {
             height: 0;
             margin-top: 0;
@@ -133,6 +136,12 @@ $left-gutter: 56px;
         // SC-TODO align left below msg area
         //top: 29px;
         top: 0;
+
+        // stop read avatars overflowing
+        width: 100%;
+        height: 22px;
+        overflow-x: scroll;
+        overflow-y: hidden;
     }
 
     .mx_EventTile_readAvatarRemainder {
